--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,6 +70,8 @@ jobs:
         run: php artisan migrate:refresh
       - name: Run Seeding
         run: php artisan db:seed
+      - name: Run test
+        run: php artisan test
       # - name: Run IDE Helper Models
       #   run: |
       #     php artisan ide-helper:models --write --reset
@@ -79,42 +81,42 @@ jobs:
       #       echo "Run: php artisan ide-helper:models --write --reset"
       #       exit 1
       #     fi
-      - name: Cache Pint
-        uses: actions/cache@v4
-        with:
-          path: ./.pint.cache
-          key: ${{ runner.os }}-pint-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-pint-
-      - name: Run Pint
-        run: ./vendor/bin/pint --test
-      - name: Cache Rector
-        uses: actions/cache@v4
-        with:
-          path: ./storage/rector/cache
-          key: ${{ runner.os }}-rector-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-rector-
-      - name: Run Rector
-        run: ./vendor/bin/rector process --dry-run
-      - name: Cache PHPStan
-        uses: actions/cache@v4
-        with:
-          path: ./storage/phpstan
-          key: ${{ runner.os }}-phpstan-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-phpstan-
-      - name: Run PHPStan
-        run: ./vendor/bin/phpstan analyze
-      - name: Cache Pest
-        uses: actions/cache@v4
-        with:
-          path: ./storage/pest/cache
-          key: ${{ runner.os }}-pest-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-pest-
-      - name: Run Pest
-        env:
-          SESSION_DRIVER: array
-          DB_CONNECTION: sqlite
-          DB_DATABASE: ":memory:"
-        run: ./vendor/bin/pest --parallel --cache-directory storage/pest/cache
+      # - name: Cache Pint
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ./.pint.cache
+      #     key: ${{ runner.os }}-pint-${{ hashFiles('**/composer.lock') }}
+      #     restore-keys: ${{ runner.os }}-pint-
+      # - name: Run Pint
+      #   run: ./vendor/bin/pint --test
+      # - name: Cache Rector
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ./storage/rector/cache
+      #     key: ${{ runner.os }}-rector-${{ hashFiles('**/composer.lock') }}
+      #     restore-keys: ${{ runner.os }}-rector-
+      # - name: Run Rector
+      #   run: ./vendor/bin/rector process --dry-run
+      # - name: Cache PHPStan
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ./storage/phpstan
+      #     key: ${{ runner.os }}-phpstan-${{ hashFiles('**/composer.lock') }}
+      #     restore-keys: ${{ runner.os }}-phpstan-
+      # - name: Run PHPStan
+      #   run: ./vendor/bin/phpstan analyze
+      # - name: Cache Pest
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ./storage/pest/cache
+      #     key: ${{ runner.os }}-pest-${{ hashFiles('**/composer.lock') }}
+      #     restore-keys: ${{ runner.os }}-pest-
+      # - name: Run Pest
+      #   env:
+      #     SESSION_DRIVER: array
+      #     DB_CONNECTION: sqlite
+      #     DB_DATABASE: ":memory:"
+      #   run: ./vendor/bin/pest --parallel --cache-directory storage/pest/cache
   # ci-frontend:
     # runs-on: ubuntu-latest
     # timeout-minutes: 10
