--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,8 @@ env:
   DB_CONNECTION: mysql
   DB_HOST: 127.0.0.1
   DB_PORT: 3306
-  DB_DATABASE: laravel
+  # DB_DATABASE: laravel
+  DB_DATABASE: testing
   DB_USERNAME: sail
   DB_PASSWORD: password
 jobs:
