--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,8 +9,7 @@ env:
   DB_CONNECTION: mysql
   DB_HOST: 127.0.0.1
   DB_PORT: 3306
-  # DB_DATABASE: laravel
-  DB_DATABASE: testing
+  DB_DATABASE: laravel
   DB_USERNAME: sail
   DB_PASSWORD: password
 jobs:
@@ -72,7 +71,7 @@ jobs:
       # - name: Run Seeding
       #   run: php artisan db:seed
       - name: Run Create key
-        run: php artisan key:generate --env=testing
+        run: php artisan key:generate
       - name: Run test
         run: php artisan test --filter ユーザー一覧
       - name: Run Migrate Refresh
